# gpt-sovits-onnx-rs

./: .gitignore  Cargo.toml  LICENSE  Readme.md  Readme_en.md  build.rs  build_for_android.sh  download_mnn.sh
doc/: perf_record.md
examples/: gpt_sovits_demo.rs  gpt_sovits_demo_jni.rs
examples/demo/: main.rs
examples/gpt-sovits-demo/: main.rs
gpt-sovits-mnn-cc/: .gitignore  CMakeLists.txt  test.cc
gpt-sovits-mnn-cc/cc/: gpt-sovits-mnn.cc  gpt-sovits-mnn.h
onnx/: build_android.sh  download_onnx.sh
scripts/: README.md  export_onnx_v2.py  optimize_aio.py  requirements.txt
scripts/GPT_SoVITS/: export_onnx_v2.py
scripts/GPT_SoVITS/AR/models/: t2s_lightning_module_onnx.py  t2s_model_onnx.py
scripts/GPT_SoVITS/AR/modules/: activation_onnx.py  patched_mha_with_cache_onnx.py  transformer_onnx.py
scripts/GPT_SoVITS/module/: attentions_onnx.py  models_onnx.py
scripts/models/: t2s_model_onnx.py  utils.py
scripts/modules/: activation_onnx.py  embedding_onnx.py  patched_mha_with_cache_onnx.py  transformer_onnx.py
src/: audio_filter.rs  cpu_info.rs  error.rs  lib.rs  lib_onnx_bk.rs  logits_sampler.rs  mnn_ffi.rs  onnx_builder.rs  phoneme.rs  sv.rs  text_preprocessor.rs  utils.rs
src/phoneme/: conversion.rs  detection.rs  symbol.rs
src/preprocessor/: bert.rs  dict.rs  lang.rs  mod.rs  num.rs  phone_symbol.rs  processor.rs  sentence.rs  text_normalize.rs  text_split.rs  utils.rs
src/preprocessor/en/: g2p_en.rs  mod.rs
src/preprocessor/zh/: g2pw.rs  jyutping_list.rs  mod.rs  split.rs  yue.rs
src/text/: bert.rs  dict.rs  g2pw.rs  mod.rs  num.rs  symbols.rs  utils.rs
src/text/en/: g2p_en.rs  mod.rs
src/text/zh/: g2pw.rs  jyutping_list.rs  mod.rs  yue.rs
