[package]
name = "gpt-sovits-onnx-rs"
version = "0.1.0"
edition = "2024"

[features]
android = ["ort/load-dynamic"]

[dependencies]
ort = { version = "2.0.0-rc.10", features = ["ndarray", "download-binaries", "copy-dylibs", "half"] }
arpabet = "2.0.0"
jieba-rs = "0.7.2"
ndarray = "0.16.1"
pinyin = "0.10.0"
log = "0.4.25"
hound = "3.5.1"
half = "2.6.0"
anyhow = "1.0.86"
futures = "0.3"
async-stream = "0.3"
tokio = { version = "1.45.1", features = ["full"] }
env_logger = "0.10"
[target.'cfg(target_os = "android")'.dependencies]
ort = { version = "2.0.0-rc.10", features = ["ndarray", "download-binaries", "copy-dylibs", "half", "load-dynamic"] }